--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server": "^2.9.15",
     "concurrently": "^5.0.2",
     "graphql": "^14.5.8",
+    "graphql-import-node": "^0.0.4",
     "lowdb": "^1.0.0",
     "nodemon": "^2.0.2"
   },
