--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/multer": "^1.3.10",
     "apollo-server": "^2.9.15",
+    "apollo-server-express": "^2.9.15",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.18.1",
     "concurrently": "^5.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-import-node": "^0.0.4",
+    "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
